--- a/package.json
+++ b/package.json
@@ -2,5 +2,8 @@
   "name": "eportfolio-graphics",
   "version": "1.0.0",
   "main": "index.js",
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "eportfolio-shared": "github:jesss-git/ePortfolio-Shared"
+  }
 }
